implement AccountController, NoteController, add model, dto, clock config
