# src/main/java/com/luwlya/lunotes/dto/LoginResponse.java
@@ -1,0 +1,4 @@
+package com.luwlya.lunotes.dto;
+
+public record LoginResponse() {
+}
