# src/main/java/com/luwlya/lunotes/dto/note/CreateNoteRequest.java
@@ -1,0 +1,4 @@
+package com.luwlya.lunotes.dto.note;
+
+public record CreateNoteRequest() {
+}
