# src/main/java/com/luwlya/lunotes/http/NoteController.java
@@ -1,0 +1,28 @@
+package com.luwlya.lunotes.http;
+
+import com.luwlya.lunotes.dto.note.CreateNoteRequest;
+import com.luwlya.lunotes.dto.note.NoteDto;
+import com.luwlya.lunotes.service.NoteService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@Validated
+public class NoteController {
+    private NoteService noteService;
+
+    @Autowired
+    public NoteController(NoteService noteService) {
+        this.noteService = noteService;
+    }
+
+    @PostMapping("/notes")
+    public ResponseEntity<NoteDto> createNote(@RequestBody @Validated CreateNoteRequest request) {
+        NoteDto note = noteService.createNote(request);
+        return ResponseEntity.ok().body(note);
+    }
+}
